--- a/InfoBuraco/InfoBuraco.vcxproj.filters
+++ b/InfoBuraco/InfoBuraco.vcxproj.filters
@@ -18,19 +18,50 @@
     <ClCompile Include="Dashboard.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Login.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dashboard.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="Login.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
-    <None Include="mapa.htm" />
+    <None Include="mapa.htm">
+      <Filter>Arquivos de Recurso</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="logo_info_buraco.png">
       <Filter>Arquivos de Recurso</Filter>
     </Image>
+    <Image Include="wall.jpg">
+      <Filter>Arquivos de Recurso</Filter>
+    </Image>
+    <Image Include="wheelbarrow.png">
+      <Filter>Arquivos de Recurso</Filter>
+    </Image>
+    <Image Include="contract.png">
+      <Filter>Arquivos de Recurso</Filter>
+    </Image>
+    <Image Include="cement.png">
+      <Filter>Arquivos de Recurso</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Dashboard.resx">
+      <Filter>Arquivos de Recurso</Filter>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Login.resx">
+      <Filter>Arquivos de Recurso</Filter>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
