--- a/.gitignore
+++ b/.gitignore
@@ -329,6 +329,6 @@ __pycache__/
 # By default, sensitive information, such as encrypted password
 # should be stored in the .pubxml.user file.
 
+.vscode/
 
 # End of https://www.gitignore.io/api/c++,visualstudio
-
