--- a/InfoBuraco/InfoBuraco.vcxproj.filters
+++ b/InfoBuraco/InfoBuraco.vcxproj.filters
@@ -47,24 +47,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
-    <None Include="mapa.htm">
+    <None Include="res\mapa.htm">
       <Filter>Arquivos de Recurso</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="logo_info_buraco.png">
+    <Image Include="res\cement.png">
       <Filter>Arquivos de Recurso</Filter>
     </Image>
-    <Image Include="wall.jpg">
+    <Image Include="res\contract.png">
       <Filter>Arquivos de Recurso</Filter>
     </Image>
-    <Image Include="wheelbarrow.png">
+    <Image Include="res\logo_info_buraco.png">
       <Filter>Arquivos de Recurso</Filter>
     </Image>
-    <Image Include="contract.png">
+    <Image Include="res\wall.jpg">
       <Filter>Arquivos de Recurso</Filter>
     </Image>
-    <Image Include="cement.png">
+    <Image Include="res\wheelbarrow.png">
       <Filter>Arquivos de Recurso</Filter>
     </Image>
   </ItemGroup>
@@ -76,6 +76,9 @@
       <Filter>Arquivos de Recurso</Filter>
     </EmbeddedResource>
     <EmbeddedResource Include="Equipamento.resx">
+      <Filter>Arquivos de Recurso</Filter>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DetalheOS.resx">
       <Filter>Arquivos de Recurso</Filter>
     </EmbeddedResource>
   </ItemGroup>
