--- a/InfoBuraco/InfoBuraco.vcxproj
+++ b/InfoBuraco/InfoBuraco.vcxproj
@@ -24,7 +24,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <Keyword>ManagedCProj</Keyword>
     <RootNamespace>InfoBuraco</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -102,13 +102,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\pcs3443\mysql-connector-c++-8.0.11-windows-x86-64bit\include\jdbc;D:\pcs3443\boost_1_67_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;.\DAO;C:\Users\dnery\MySQLConnector\include\jdbc;C:\Users\dnery\boost\boost_1_67_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>mysqlcppconn.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <EntryPointSymbol>Main</EntryPointSymbol>
-      <AdditionalLibraryDirectories>D:\pcs3443\mysql-connector-c++-8.0.11-windows-x86-64bit\lib64\vs14;D:\pcs3443\boost_1_67_0\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\dnery\MySQLConnector\lib64\vs14;C:\Users\dnery\boost\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -137,27 +137,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Dashboard.cpp" />
+    <ClCompile Include="DAO\EquipamentoDAO.cpp" />
+    <ClCompile Include="DAO\UsuarioDAO.cpp" />
+    <ClCompile Include="TelaDashboard.cpp" />
     <ClCompile Include="DetalheOS.cpp" />
     <ClCompile Include="Equipamento.cpp" />
-    <ClCompile Include="EquipamentoDAO.cpp" />
     <ClCompile Include="Login.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TelaEquipamento.cpp" />
     <ClCompile Include="MySQL.cpp" />
     <ClCompile Include="SecurityController.cpp" />
     <ClCompile Include="Usuario.cpp" />
-    <ClCompile Include="UsuarioDAO.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Dashboard.h">
+    <ClInclude Include="DAO\EquipamentoDAO.h" />
+    <ClInclude Include="DAO\UsuarioDAO.h" />
+    <ClInclude Include="TelaDashboard.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="DetalheOS.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Equipamento.h" />
-    <ClInclude Include="EquipamentoDAO.h" />
     <ClInclude Include="Login.h">
       <FileType>CppForm</FileType>
     </ClInclude>
@@ -167,7 +168,6 @@
     <ClInclude Include="MySQL.h" />
     <ClInclude Include="SecurityController.h" />
     <ClInclude Include="Usuario.h" />
-    <ClInclude Include="UsuarioDAO.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
@@ -176,8 +176,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Dashboard.resx">
-      <DependentUpon>Dashboard.h</DependentUpon>
+    <EmbeddedResource Include="TelaDashboard.resx">
+      <DependentUpon>TelaDashboard.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DetalheOS.resx">
       <DependentUpon>DetalheOS.h</DependentUpon>
